--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-593-personal-shape
         </div>
         <div class="hero-content">
             <div class="hero-subtitle">Creative Designer</div>
-            <h1>Transforming Ideas Into Remarkable Products With Wonderful Experiences...</h1>
+            <h1>Transforming Ideas Into Remarkable Products</h1>
             <p class="subtitle">I create products by blending thoughtful design with innovative solutions, prioritizing the end-user experience at every stage of development</p>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
         </div>
@@ -190,4 +190,5 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
