--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-593-personal-shape
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title fade-in">About Me</h2>
-            <div class="about-content">
+<!--             <div class="about-content"> -->
 <!--                 <div class="about-image slide-in-left"></div> -->
                 <div class="about-text slide-in-right">
                     <h3>Passionate about creating meaningful products</h3>
@@ -84,7 +84,7 @@ https://templatemo.com/tm-593-personal-shape
                         <span class="skill-tag">Tools using AI Agents</span>
                     </div>
                 </div>
-            </div>
+<!--             </div> -->
         </div>
     </section>
 
@@ -190,5 +190,6 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
