--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ https://templatemo.com/tm-593-personal-shape
 <!--                 <div class="about-image slide-in-left"></div> -->
                 <div class="about-text slide-in-right">
                     <h3>Passionate about creating meaningful products</h3>
-                    <p>With around 19 years of work experience in IT industry, I specialize in creating user-centered solutions for new requirements.</p>
-                    <p>Over the period of time, I have learnt the overall skill set required for Product Management.</p>
+                    <p>With around 19 years of work experience in IT industry, I specialize in creating user-centered solutions for new requirements.<br>
+                    Over the period of time, I have learnt the overall skill set required for Product Management.</p>
                     <p>That is driving me to convert ideas into meaningful products.</p>
                     <p>I believe that a great product is not just about how it looks, but how it works and makes people feel.</p>
                     <p>With this in mind, I am trying to sketch ideas and explore technologies to convert the ideas into products.</p> 
@@ -190,6 +190,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
