--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@ https://templatemo.com/tm-593-personal-shape
 <!--                 <div class="about-image slide-in-left"></div> -->
                 <div class="about-text slide-in-right">
                     <h3>Passionate about creating meaningful products</h3>
-                    <p>With around 19 years of work experience in IT industry, I specialize in creating user-centered solutions for new requirements.<br>
-                    Over the period of time, I have learnt the overall skill set required for Product Management.</p>
-                    <p>That is driving me to convert ideas into meaningful products.</p>
-                    <p>I believe that a great product is not just about how it looks, but how it works and makes people feel.</p>
-                    <p>With this in mind, I am trying to sketch ideas and explore technologies to convert the ideas into products.</p> 
-                    <p>Every project is an opportunity to solve problems that makes life of someone easier.</p>
+                    <p>
+                        With around 19 years of work experience in IT industry, I specialize in creating user-centered solutions for new requirements.<br>
+                        Over the period of time, I have learnt the overall skill set required for Product Management.<br>
+                        That is driving me to convert ideas into meaningful products.<br>
+                        I believe that a great product is not just about how it looks, but how it works and makes people feel.<br>
+                        With this in mind, I am trying to sketch ideas and explore technologies to convert the ideas into products.<br> 
+                        Every project is an opportunity to solve problems that makes life of someone easier.
+                    </p>
                     <div class="skills">
                         <span class="skill-tag">UI/UX Design</span>
                         <span class="skill-tag">Web Development</span>
@@ -190,6 +192,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
