--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-593-personal-shape
                     <div class="portfolio-image"></div>
                     <div class="portfolio-content">
                         <h4>Corporate 9-5 Job</h4>
-                        <p>I have worked for the Walmart (via CTS as employer) from 2006 to 2009, where I learnt the basis of a software product.</p>
+                        <p>I have worked for the Walmart (via CTS as employer) from Oct 2006 to Jan 2010, where I learnt the basis of a software product.</p>
                         <div class="portfolio-tech">
                             <span class="tech-tag">Mainframe - COBOL, DB2, CICS</span>
                             <span class="tech-tag">Database Design</span>
@@ -111,7 +111,7 @@ https://templatemo.com/tm-593-personal-shape
                     <div class="portfolio-image"></div>
                     <div class="portfolio-content">
                         <h4>Corporate 9-5 Job</h4>
-                        <p>I am working for Morgan Stanley (via TCS as employer) from 2009 till Today.</p>
+                        <p>I am working for Morgan Stanley (via TCS as employer) from Feb 2010 till Today.</p>
                         <p>I have got opportunity to work with multiple teams from across the worlds.</p>
                         <p>That gave me the space to understand the mindset and expetations form stakeholders of different departments.</p>
                         <p>Which made me to realize for a given requirement/problem, same answer is not suitable for all.</p>
@@ -192,6 +192,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
