--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-593-personal-shape
             <div class="shape shape-6"></div>
         </div>
         <div class="hero-content">
-            <div class="hero-subtitle">Creative Designer</div>
+<!--             <div class="hero-subtitle"></div> -->
             <h1>Transforming Ideas Into Remarkable Products</h1>
             <p class="subtitle">I create products by blending thoughtful design with innovative solutions, prioritizing the end-user experience at every stage of development</p>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
@@ -192,6 +192,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
