--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-593-personal-shape
                 <div class="portfolio-item">
                     <div class="portfolio-image"></div>
                     <div class="portfolio-content">
-                        <h4>Corporate 9-5 Job</h4>
+                        <h4> As a Developer</h4>
                         <p>I have worked for the Walmart (via CTS as employer) from Oct 2006 to Jan 2010, where I learnt the basis of a software product.</p>
                         <div class="portfolio-tech">
                             <span class="tech-tag">Mainframe - COBOL, DB2, CICS</span>
@@ -110,9 +110,9 @@ https://templatemo.com/tm-593-personal-shape
                 <div class="portfolio-item">
                     <div class="portfolio-image"></div>
                     <div class="portfolio-content">
-                        <h4>Corporate 9-5 Job</h4>
-                        <p>I am working for Morgan Stanley (via TCS as employer) from Feb 2010 till Today.</p>
-                        <p>I have got opportunity to work with multiple teams from across the worlds.</p>
+                        <h4>As a Technical Lead and Delivery Manager</h4>
+                        <p>I am working for Morgan Stanley Wealth Management (via TCS as employer) from Feb 2010 till Today.</p>
+                        <p>I have got opportunity to work with multiple teams from across the world.</p>
                         <p>That gave me the space to understand the mindset and expetations form stakeholders of different departments.</p>
                         <p>Which made me to realize for a given requirement/problem, same answer is not suitable for all.</p>
                         <p>We need to use different language, tools, and expression depending on whom we are dealing with to create user-centered solutions for requirements</p>
@@ -192,6 +192,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
