--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ https://templatemo.com/tm-593-personal-shape
                         <p>I am working for Morgan Stanley Wealth Management (via TCS as employer) from Feb 2010 till Today.</p>
                         <p>I have got opportunity to work with multiple teams from across the world.</p>
                         <p>That gave me the space to understand the mindset and expetations form stakeholders of different departments.</p>
-                        <p>Which made me to realize for a given requirement/problem, same answer is not suitable for all.</p>
-                        <p>We need to use different language, tools, and expression depending on whom we are dealing with to create user-centered solutions for requirements</p>
+                        <p>Which made me to realize, for a given requirement/problem, same answer is not suitable for all.</p>
+                        <p>We need to use different languages, tools, and expressions depending on whom we are dealing with to create user-centered solutions for requirements</p>
                         
                     </div>
                 </div>
@@ -192,6 +192,7 @@ https://templatemo.com/tm-593-personal-shape
 </body>
 
 </html>
+
 
 
 
